--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
 
-  intl: 0.15.7
+  intl: ^0.15.7
 
 dev_dependencies:
   flutter_test:
