--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,9 @@ description: A demo for diagnosing performance issues in Flutter code
 # Read more about versioning at semver.org.
 version: 1.0.0+1
 
+environment:                                                            
+  sdk: '>=2.10.0 <3.0.0'                                                
+
 dependencies:
   flutter:
     sdk: flutter
